--- a/custom_components/ldata/translations/en.json
+++ b/custom_components/ldata/translations/en.json
@@ -12,16 +12,19 @@
             "user": {
                 "data": {
                     "username": "my.leviton.com Username",
-                    "password": "my.leviton.com Password"
-                }
+                    "password": "my.leviton.com Password",
+                    "three_phase": "Three phase power"
+                },
+                "title": "Configure LDATA"
             }
         }
     },
-        "options": {
+    "options": {
         "step": {
             "init": {
                 "data": {
-                    "update_interval": "Interval to poll my.leviton.com (Seconds)"
+                    "update_interval": "Interval to poll my.leviton.com (Seconds)",
+                    "three_phase": "Three phase power"
                 },
                 "description": "Configure Controller Options"
             }
