--- a/custom_components/ldata/translations/pt-PT.json
+++ b/custom_components/ldata/translations/pt-PT.json
@@ -4,17 +4,17 @@
             "already_configured": "Conta já configurada"
         },
         "error": {
-            "cannot_connect": "Falha na ligação",
-            "invalid_auth": "Falha na autenticação",
-            "unknown": "Erro desconhecido"
+            "cannot_connect": "Falha na conexão",
+            "invalid_auth": "Autenticação inválida",
+            "unknown": "Erro inesperado"
         },
         "step": {
             "user": {
                 "data": {
-                    "username": "my.leviton.com Utilizador",
-                    "password": "my.leviton.com Password",
-                    "three_phase": "3 Fases?",
-                    "read_only": "Somente leitura"
+                    "username": "Utilizador my.leviton.com",
+                    "password": "Palavra-passe my.leviton.com",
+                    "three_phase": "Sistema trifásico",
+                    "read_only": "Apenas leitura"
                 },
                 "title": "Configurar LDATA"
             }
@@ -23,12 +23,19 @@
     "options": {
         "step": {
             "init": {
+                "title": "Opções do Leviton LDATA",
                 "data": {
-                    "update_interval": "Intervalo de pesquisa my.leviton.com (segundos)",
-                    "three_phase": "3 Fases?",
-                    "read_only": "Somente leitura"
+                    "update_interval": "Intervalo de Atualização (segundos)",
+                    "three_phase": "Sistema Trifásico",
+                    "read_only": "Modo Apenas Leitura",
+                    "log_warnings": "Registar Avisos de Picos e Resets",
+                    "log_all_raw": "Registar Todos os Dados Brutos da API",
+                    "enable_specific_logging": "Ativar Registo de Campos Específicos",
+                    "log_fields": "Campos a Registar"
                 },
-                "description": "Configurar o controlador"
+                "data_description": {
+                    "log_fields": "Para encontrar os nomes dos campos, ative 'Registar Todos os Dados Brutos da API' e verifique os registos do Home Assistant. Insira aqui, separados por vírgulas."
+                }
             }
         }
     }
