--- a/custom_components/ldata/translations/pt-PT.json
+++ b/custom_components/ldata/translations/pt-PT.json
@@ -34,7 +34,7 @@
                     "log_fields": "Campos a Registar"
                 },
                 "data_description": {
-                    "log_fields": "Para encontrar os nomes dos campos, ative 'Registar Todos os Dados Brutos da API' e verifique os registos do Home Assistant. Insira aqui, separados por vírgulas."
+                    "log_fields": "Para encontrar os nomes dos campos, ative 'Registar Todos os Dados Brutos da API' e verifique os registos do Home Assistant. Digite os dados acima separados por vírgula."
                 }
             }
         }
