--- a/custom_components/ldata/translations/en.json
+++ b/custom_components/ldata/translations/en.json
@@ -28,7 +28,8 @@
                     "update_interval": "Update Interval (seconds)",
                     "three_phase": "Three Phase System",
                     "read_only": "Read Only Mode",
-                    "log_warnings": "Log Spike & Reset Warnings",
+                    "log_warnings": "Log General Plugin Errors",
+                    "log_data_warnings": "Log Data Value Warnings (Spikes/Resets)",
                     "log_all_raw": "Log All Raw API Data",
                     "enable_specific_logging": "Enable Specific Field Logging",
                     "log_fields": "Fields to Log"
